solc_ossfuzz_seed_corpus/test_sol/test_348acf73425a24aaff773161fba4038c217839e785da61eb96729ab9f3d57a52_03710ee2a08700c406cd3ba7cf2c49b7aa3a3ea5_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
library L0 {
  using L0 for *;
  function f0() public   
  {
  }
  using L0 for *;
  error er0();
  modifier m0() 
  {
    _;
  }
  event ev0(function (bool, bytes15, function (uint72) internal   returns (bytes7)) internal   returns (int232, uint32, uint72)  ep0);
  function f1() private  m0() 
  {
  }
}
using L0 for uint;
using L0 for uint;
enum EN0 {
  M0, M1, M2, M3, M4, M5, M6, M7,
  M8, M9, M10, M11, M12, M13, M14, M15,
  M16, M17, M18, M19, M20, M21, M22, M23,
  M24, M25, M26, M27, M28, M29, M30, M31,
  M32, M33, M34, M35, M36, M37, M38, M39,
  M40, M41, M42, M43, M44, M45, M46, M47,
  M48, M49, M50, M51, M52, M53
}
using L0 for uint;
// ----
// TypeError 3417: (su0.sol:168-288): Internal or recursive type is not allowed as event parameter type.
